Remove docker compose

--- a/default.conf
+++ b/default.conf
@@ -10,7 +10,7 @@ server {
 
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass 192.168.220.1:9000;
+        fastcgi_pass host.docker.internal:9000;
         fastcgi_index index.php;
         fastcgi_read_timeout 1000;
         include fastcgi_params;
