--- a/configs/renovo.conf
+++ b/configs/renovo.conf
@@ -5,7 +5,7 @@ server {
     access_log /var/log/nginx/access.log;
 
     location / {
-        proxy_pass http://host.docker.internal:8000;
+        proxy_pass http://172.17.0.1:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Real-IP $remote_addr;
